--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-DrumKitButtons-backups/
-fp-info-cache
-fp-lib-table
-sym-lib-table
+KiCAD/DrumKitButtons-backups/
+KiCAD/gerber_to_order/
+KiCAD/fp-info-cache
+KiCAD/fp-lib-table
+KiCAD/sym-lib-table
 *.lck
 *.bak
-gerber_to_order/
