--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v3
         with:
             submodules: 'recursive'
+            fetch-tags: 'true'
+            fetch-depth: '0'
 
       - name: Set up KiCad
         uses: aseanwatson/setup-kicad@v1.0
