we don't need --dirty=-dirty on git describe

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Export Schematic PDF
         run: |
-          kicad-cli sch export pdf -o schematic.pdf -D "REV=$(git describe --always --dirty=-dirty)" KiCAD/DrumKitButtons.kicad_sch
+          kicad-cli sch export pdf -o schematic.pdf -D "REV=$(git describe --always)" KiCAD/DrumKitButtons.kicad_sch
 
       - name: Run DRC
         run: |
@@ -43,11 +43,11 @@ jobs:
 
       - name: Export PCB PDF
         run: |
-          kicad-cli pcb export pdf -o board.pdf -l "*" -D "REV=$(git describe --always --dirty=-dirty)" KiCAD/DrumKitButtons.kicad_pcb
+          kicad-cli pcb export pdf -o board.pdf -l "*" -D "REV=$(git describe --always)" KiCAD/DrumKitButtons.kicad_pcb
 
       - name: Export VRML 3D Board
         run: |
-          kicad-cli pcb export vrml -o board.vrml -D "REV=$(git describe --always --dirty=-dirty)" KiCAD/DrumKitButtons.kicad_pcb
+          kicad-cli pcb export vrml -o board.vrml -D "REV=$(git describe --always)" KiCAD/DrumKitButtons.kicad_pcb
 
       - name: Upload ERC
         uses: actions/upload-artifact@v4.4.3
