remove DrumKitButtons.kicad_pcb.zip; it's built

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ KiCAD/DrumKitButtons-backups/
 KiCAD/gerber_to_order/
 KiCAD/fp-info-cache
 KiCAD/production/
+KiCAD/DrumKitButtons.kicad_pcb.zip
 *.lck
 *.bak
